# cmaketest

test1/: CMakeLists.txt
test1/src/: main.cpp
test2/lib/: CMakeLists.txt
test3/src/: CMakeLists.txt  main.cpp
test4/: CMakeLists.txt  src.rar
test4/src/: camera_calib.cpp  camera_calib.h  main.cpp
